Changes to be committed: 	modified:   Algs4Prt18puzzle/run.sh