@@ -5,7 +5,8 @@ if [ "x" != "x$1" ] ; then
 else
   for F in 8puzzle/*.txt ; do
      echo $F
-     java -jar dist/${JAR} $F|egrep -e 'Minimum number of moves|No solution possible'
+     java -Xms128m -Xmx256m -XX:PermSize=256M -jar dist/${JAR} $F|
+     egrep -e 'Minimum number of moves|No solution possible'
      sleep 1
   done
 fi
